# pdf_struct

./: .gitignore  README.md  cargo.toml  rust-toolchain.yml
doc_structure/: Cargo.toml
extractor/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  vcpkg.json
extractor/ports/mupdf/: vcpkg.json
extractor/src/: classifier.rs  config.rs  extractor.rs  lib.rs  pattern.rs
extractor/src_cpp/: main.cpp  main.h
pdf-struct-classifer/: Cargo.toml
pdf-struct-classifer/src/: pattern.rs
pdf-struct-classifier/: Cargo.toml  README.md
pdf-struct-classifier/src/: config.rs  instances.rs  lib.rs  tests.rs
pdf-struct-examples/: Cargo.toml  README.md
pdf-struct-examples/src/: lib.rs
pdf-struct-extractor/: CMakeLists.txt  Cargo.toml  README.md  build.rs
pdf-struct-extractor/ports/mupdf/: portfile.cmake
pdf-struct-extractor/src/: extractor.rs  lib.rs
pdf-struct-macros/: Cargo.toml
pdf-struct-macros/src/: lib.rs
pdf-struct-traits/: .gitignore  Cargo.toml
pdf-struct-traits/src/: lib.rs
proc_test/: Cargo.toml
proc_test/src/: lib.rs
traits/: Cargo.toml
traits/src/: lib.rs
