[package]
name = "pdf_parser_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.169"
cxx-build = "1.0.169"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
doc_structure = { path = "../doc_structure" }
traits = { path = "../traits" }
type-info = "0.2.1"

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.169"

[features]
logging = []

[profile.release]
opt-level = 3
lto = "fat"             # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
panic = "abort"         # Smaller binaries, faster unwinding
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
