[package]
name = "pdf-struct-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.169"
cxx-build = "1.0.169"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
pdf-struct-macros = { path = "../pdf-struct-macros" }
pdf-struct-traits = { path = "../pdf-struct-traits" }

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.169"

[features]
logging = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
